--- a/src/OnePrecept.css
+++ b/src/OnePrecept.css
@@ -9,13 +9,20 @@
 }
 
 .one-precept {
-    margin-top: 15px;
+    margin-top: 4px;
 
     max-width: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    &:not(:has(.first-prcpt)) {
+        padding: 16px;
+        padding-bottom: 0;
+        border-radius: 20px;
+        background-color: #111115;
+    }
 }
 
 .one-precept p {
