--- a/src/PreceptSelector.css
+++ b/src/PreceptSelector.css
@@ -1,12 +1,11 @@
 nav {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
 
-    height: 100%;
-    overflow-y: scroll;
+    height: 100vh;
     width: 100%;
-    max-width: 600px;
+    overflow-y: auto;
 
     background-color: rgba(20, 20, 20, 0.8);
     transform: translateX(-100%);
@@ -17,11 +16,18 @@ nav.opened {
     transform: translateX(0%);
 }
 
-.choose-precept {
+.grid-btn {
+    margin-top: 90px;
+
     display: flex;
     align-content: center;
+    justify-content: center;
     flex-wrap: wrap;
-    padding: 8px;
+    gap: 8px;
+
+    padding: 0 2rem;
+
+    overflow: hidden;
 }
 
 .choose-precept button {
@@ -31,11 +37,9 @@ nav.opened {
     font-weight: 900;
     width: 50px;
     height: 50px;
-    margin: 10px 3px;
-    padding: 0;
 
     background-color: transparent;
-    color: white;
+    color: var(--text-color);
 
     cursor: pointer;
 
@@ -43,7 +47,7 @@ nav.opened {
     align-items: center;
     justify-content: center;
 
-    border: 2px solid transparent;
+    border: 2px solid var(--text-color);
     border-radius: 50%;
 
     box-shadow: 0 0 0 transparent;
